Add GitHub Pages documentation with updated installation info

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ coverage.html
 # Go vendor directory
 vendor/
 
-# Generated documentation
-docs/
+# Generated documentation (excluding GitHub Pages docs)
 godoc/
 *_doc.txt
 
